--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,21 +14,21 @@
         gap: 50px;
     }
     .nav-link{
-        font-size: 17px !important;
+        font-size: 17px;
     }
     .de-pin-for-agriculture{
         gap: 20px;
     }
     h1{
         color:#000;
-        font-size: 60px !important;
+        font-size: 60px;
     }
     .agriculture{
         padding-left: 32px;
         font-size: 60px;
     }
     input{
-        font-size: 26px !important;
+        font-size: 26px;
         padding-right: 310px;
         padding-top: 19px;
         padding-bottom: 20px;
@@ -89,9 +89,6 @@
     .satellite {
         padding-top: 80px;
         padding-bottom: 100px;
-    }
-    .satellite-artboard{
-        padding-left: 20px;
     }
     .join-the-movement {
         padding-top: 60px;
@@ -203,14 +200,14 @@
         gap: 15px;
     }
     h1{
-        font-size: 50px !important;
+        font-size: 50px;
     }
     .agriculture{
         padding-left: 26px;
         font-size: 50px;
     }
     input{
-        font-size: 24px !important;
+        font-size: 24px;
         padding-right: 245px;
         padding-top: 17px;
         padding-bottom: 18px;
@@ -252,6 +249,9 @@
         font-size: 19px;
         padding-bottom: 10px;
     }
+    .advantage {
+        padding-left: 12px;
+    }
     .feature-head {
         font-size: 26px;
         margin-bottom: 6px;
@@ -276,7 +276,7 @@
         font-size: 26px;
     }
     .how-ctn {
-        padding-top: 65px;
+        padding-top: 35px;
     }
 
 
@@ -315,6 +315,7 @@
         padding-bottom: 20px;
     }
     .where {
+        padding-top: 30px;
         padding-bottom: 8px;
         font-size: 19px;
     }
@@ -324,9 +325,6 @@
         padding-bottom: 60px;
     }
     .farmsent-logo {
-        /* padding-right: 112px;
-        padding-top: 0px;
-        padding-left: 54px; */
         width: 90%;
     }
     .about-farmsent {
@@ -410,14 +408,14 @@
         gap: 10px;
     }
     h1{
-        font-size: 40px !important;
+        font-size: 40px;
     }
     .agriculture {
         padding-left: 22px;
         font-size: 40px;
     }
     input{
-        font-size: 22px !important;
+        font-size: 22px;
         padding-right: 135px;
         padding-top: 15px;
         padding-bottom: 16px;
@@ -474,8 +472,9 @@
         padding-bottom: 60px;
     }
     .how-ctn {
-        padding-top: 60px;
-    }
+        /* padding-top: 60px; */
+        padding-top: 30px;
+    }  
     .how {
        margin-bottom: 7px;
     }
@@ -509,9 +508,11 @@
         padding-bottom: 60px;
     }
     .where {
+        padding-top: 25px;
         padding-bottom: 2px;
     }
     .where-ctn {
+        
         font-size: 22px;
         padding-bottom: 15px;
     }
@@ -568,10 +569,10 @@
 @media (max-width: 576px){
     .navigation {
         padding-top: 30px !important;
-        padding-left: 40px !important;
+        padding-left: 0px !important;
     }
     .nav-link {
-        font-size: 16px !important;
+        font-size: 16px;
     }
     #header.active .navigation{
         padding-top:20px !important;
@@ -579,13 +580,16 @@
     #header.active .nav-scroll{
         margin-bottom: 20px; 
     }
+    .navbar-toggler {
+        margin-right: 0px;
+    }
     .navbar-toggler-icon {
         width: 27px !important;
         height: 27px !important;
     }
     .depps-header-logo {
-        width: 180px !important;
-        height: 46px !important;
+        width: 180px;
+        height: 46px;
     }
     .nav-item{
         padding-top: 15px;
@@ -599,15 +603,16 @@
         font-size: 30px;
     }
     h1 {
-        font-size: 30px !important;
+        font-size: 30px;
     }
     input {
-        font-size: 19px !important;
+        font-size: 19px;
         padding-right: 60px;
         padding-top: 10px;
         padding-bottom: 11px;
         padding-left: 40px;
         background-position: 12px;
+        background-size: 20px;
     }
     ::placeholder{
         font-size: 19px;
@@ -659,7 +664,7 @@
        font-size: 18px;
     }
     .how-ctn {
-        padding-top: 40px;
+        padding-top: 25px;
     }
     .how-and-supplychain {
         padding-bottom: 40px;
@@ -697,6 +702,7 @@
         padding-bottom: 40px;
     }
     .where {
+        padding-top: 20px;
         padding-bottom: 0px;
         font-size: 18px;
     }
@@ -767,15 +773,21 @@
     .bi-arrow-up {
          font-size: 22px;
     }
+    .copyright{
+        padding-right: 5px;
+    }
+    .reserve{
+        padding-left: 5px;
+    }
 }
 
 @media (max-width: 480px){
     .container-fluid{
-        margin-left: 0px !important;
-        margin-right: 0px !important;
+        margin-left: 0px;
+        margin-right: 0px;
     }
     .nav-link {
-        font-size: 15px !important;
+        font-size: 15px;
     }
     .navigation {
         padding-top: 20px !important;
@@ -789,8 +801,8 @@
         margin-bottom: 15px; 
     }
     .depps-header-logo {
-        width: 160px !important;
-        height: 45px !important;
+        width: 160px;
+        height: 45px;
     }
     .navbar{
         font-size: 16px;
@@ -804,7 +816,7 @@
         gap: 10px;
     }
     h1 {
-        font-size: 22px !important;
+        font-size: 22px;
         margin-bottom: 6px;
     }
     .agriculture {
@@ -812,20 +824,20 @@
         font-size: 22px;
     }
     input {
-        font-size: 18px !important;
-        padding-right: 5px;
+        width: 250px;
+        font-size: 18px;
+        padding-right: 0px;
         padding-top: 9px;
         padding-bottom: 10px;
-        padding-left: 35px;
-        background-position: 10px;
-        background-size: 18px;
+        padding-left: 32px;
+        background-position: 8px;
+        background-size: 17px;
     }
     .help {
         right: -32px;
     }
     .navbar-toggler {
-        margin-left: 60px;
-        margin-right: 0px;
+        margin-left: 0px;
     }
     .tooltip-inner {
         font-size: 13px;
@@ -860,7 +872,7 @@
     }
 
     .how-ctn {
-        padding-top: 20px;
+        padding-top: 15px;
     }
     .technology {
         font-size: 19px;
@@ -888,6 +900,7 @@
         padding-bottom: 30px;
     }
     .where {
+        padding-top: 15px;
         font-size: 17px;
     }
     .where-ctn {
@@ -942,7 +955,6 @@
     .bi-arrow-up{
         font-size: 20px;
     }
-
 }
 
 
